--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-scipy==1.5.2
-networkx==2.5
-cogdl==0.2.0.post1
-numpy==1.19.2
+ogb==1.3.2
+scipy==1.4.1
+networkx==2.5.1
+numpy==1.18.1
 tabulate==0.8.7
-tqdm==4.51.0
-PyYAML==5.4.1
-scikit_learn==0.24.1
+tqdm==4.31.1
+PyYAML==5.3
+scikit_learn==0.22.2
+googledrivedownloader==0.4
+category_encoders==2.3.0
