--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-ogb==1.3.2
+# ogb==1.3.3
+pillow==8.4.0
 scipy==1.4.1
 networkx==2.5.1
 numpy==1.18.1
 tabulate==0.8.7
-tqdm==4.31.1
-PyYAML==5.3
+tqdm==4.62.3
+PyYAML==5.3.1
 scikit_learn==0.22.2
 googledrivedownloader==0.4
 category_encoders==2.3.0
