--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-# ogb==1.3.3
+--find-links https://data.dgl.ai/wheels/repo.html
+
+ogb==1.3.3
 pillow==8.4.0
 scipy==1.4.1
 networkx==2.5.1
@@ -9,3 +11,5 @@ PyYAML==5.3.1
 scikit_learn==0.22.2
 googledrivedownloader==0.4
 category_encoders==2.3.0
+torch==1.9.1
+dgl==0.6.1
